add service Details and responsive

--- a/src/app/features/pages/item-service/item-service.component.html
+++ b/src/app/features/pages/item-service/item-service.component.html
@@ -1,4 +1,4 @@
-<a class="card-service " >
+<a class="card-service " routerLink="/service-details">
   <img [src]="item.image" class="card-img-top" alt="..." >
     <p >
       {{item.title}}
