--- a/src/assets/scss/layouts/_header.scss
+++ b/src/assets/scss/layouts/_header.scss
@@ -60,6 +60,12 @@ header.top-header{
         color: var(--primary-color);
         font-size: rem(20);
         font-weight: bold;
+        @include mqMax(xxl) {
+          font-size: rem(18);
+        }
+        @include mqMax(xl) {
+          font-size: rem(16);
+        }
       }
     }
     &:hover {
