--- a/src/assets/scss/layouts/_navbar.scss
+++ b/src/assets/scss/layouts/_navbar.scss
@@ -113,6 +113,9 @@ header.nav-bar {
             &:hover{
               color: var(--primary-color-dark)
             }
+            &.active {
+              background-color: var(--white-color);
+            }
           }
         }
         &.show {
@@ -166,6 +169,124 @@ header.nav-bar {
       padding: 0;
       padding-inline-end: rem(16);
 
+    }
+  }
+}
+
+
+.view-mobile {
+  display: none;
+  position: fixed;
+  inset: 0;
+  z-index: 1000;
+  opacity: 0;
+  inset-inline-start: 100%;
+  transition: all 0.3s ease-in-out;
+  transition-duration: .2s;
+  @include mqMax(lg) {
+    display: block;
+    &.show {
+      inset-inline-start: 0;
+      opacity: 1;
+    }
+  }
+  .overlay {
+    position: absolute;
+    inset: 0;
+    background-color: rgb(var(--black-rgb-color)/ 80%);
+    z-index: 1;
+  }
+  .sidebar {
+    max-width: rem(350);
+    width: 100%;
+    height: 100%;
+    background-color: var(--white-color);
+    margin-inline-start: auto;
+    padding: rem(10);
+    overflow-y: auto;
+    position: relative;
+    z-index: 2;
+    ul{
+      li {
+        a {
+          display: block;
+          color: var(--gray-70-color);
+          font-weight: 400;
+          border:none;
+          border-bottom: rem(1) solid var(--gray-25-color);
+          text-wrap: nowrap;
+          padding-block: var(--s-20) ;
+          line-height: 1;
+          &:hover{
+            color: var(--primary-color-dark)
+          }
+          &.active {
+            background-color: var(--white-color);
+          }
+        }
+        .sub-menu {
+          display: grid;
+          grid-template-rows: 0fr;
+          transition: all 0.3s ease-in-out;
+          .sub-content {
+            overflow: hidden;
+          }
+          &.show {
+            grid-template-rows: 1fr;
+            h6 {
+              text-wrap: nowrap;
+              font-weight: 500;
+              color: var(--primary-color-dark);
+              padding-block: rem(15) ;
+            }
+            ul {
+              padding-inline-start: rem(20) !important;
+              padding-bottom: rem(16);
+              border-bottom: 1px solid var(--gray-25-color);
+              li {
+                a {
+                  padding-block:rem(8) ;
+                  border: none;
+                  display: block;
+                  line-height: 1.5;
+                  position: relative;
+                  &::before {
+                    content: '\f111';
+                    font-family: 'Font Awesome 5 Free';
+                    font-weight: 900;
+                    position: absolute;
+                    inset-inline-start: rem(-20);
+                    top: 50%;
+                    transform: translateY(-50%);
+                    font-size: rem(10);
+                  }
+                }
+              }
+            }
+          }
+        }
+        &:has(.sub-menu) {
+
+          & > a {
+            position: relative;
+            &::after {
+              content: '\f078';
+              font-family: 'Font Awesome 5 Free';
+              font-weight: 900;
+              position: absolute;
+              inset-inline-end: rem(10);
+              transition: all 0.3s ease-in-out;
+            }
+            &.show {
+              &::after {
+
+                transform: rotate(180deg);
+              }
+            }
+          }
+
+        }
+      }
     }
   }
 }
