--- a/src/assets/scss/pages/_ourService.scss
+++ b/src/assets/scss/pages/_ourService.scss
@@ -7,8 +7,10 @@
     margin-top: 0;
   }
   .title-page {
-
-    background: linear-gradient(90deg,  rgb(var(--white-rgb-color)/ 80%) 100%),url(../../img/ourService.jpg) no-repeat center bottom / cover;
+    background-image: linear-gradient(90deg,  rgb(var(--white-rgb-color)/ 80%) 100%),url(../../img/ourService.jpg);
+    background-repeat: no-repeat;
+    background-position: center bottom;
+    background-size: cover;
     height: 300px;
     text-align: center;
     display: grid;
