--- a/src/app/features/pages/testimonials/testimonials.component.html
+++ b/src/app/features/pages/testimonials/testimonials.component.html
@@ -26,7 +26,7 @@
             <div class="profile">
                             <h5 class="name fw-bold"> {{item.name}}</h5>
                 <div class="image">
-                  <img src="../../../../assets/img/user-pic.jpg" alt="{{item.name}}" class="img-fluid">
+                  <img src="./assets/img/user-pic.jpg" alt="{{item.name}}" class="img-fluid">
                 </div>
             </div>
 
