--- a/src/app/features/pages/main-carousel/main-carousel.component.html
+++ b/src/app/features/pages/main-carousel/main-carousel.component.html
@@ -4,7 +4,7 @@
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../../../../assets/img/website/bg-slider-img1.jpg" class="d-block w-100" alt="...">
+      <img src="./assets/img/website/bg-slider-img1.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption ">
       <h1>شركة فريون</h1>
       <p>خدمات منزلية متكاملة
@@ -12,7 +12,7 @@
     </div>
     </div>
     <div class="carousel-item">
-      <img src="../../../../assets/img/website/bg-slider2.jpg" class="d-block w-100" alt="...">
+      <img src="./assets/img/website/bg-slider2.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption ">
       <h1>شركة فريون</h1>
       <p>خدمات منزلية متكاملة
@@ -20,7 +20,7 @@
     </div>
     </div>
     <div class="carousel-item">
-      <img src="../../../../assets/img/website/bg-slider3.jpg" class="d-block w-100" alt="...">
+      <img src="./assets/img/website/bg-slider3.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption ">
       <h1>شركة فريون</h1>
       <p>خدمات منزلية متكاملة
