--- a/src/app/features/pages/service-details/service-details.component.html
+++ b/src/app/features/pages/service-details/service-details.component.html
@@ -1,5 +1,5 @@
 <section class="our-service service-details">
-  <div class="title-page mb-5" style="    background-image: linear-gradient(90deg,  rgb(var(--white-rgb-color)/ 70%) 100%),url(../../../../assets/img/website/AirConditioningMaintenance.jpg);
+  <div class="title-page mb-5" style="    background-image: linear-gradient(90deg,  rgb(var(--white-rgb-color)/ 70%) 100%),url(./assets/img/website/AirConditioningMaintenance.jpg);
   ">
     <h2>  شركة صيانة مكيفات بالرياض
 
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-lg-6 mb-5">
           <div class="image image-start mb-4">
-            <img src="../../../../assets/img/website/Air-Conditioning-Maintenance-bottom.jpg" alt="">
+            <img src="./assets/img/website/Air-Conditioning-Maintenance-bottom.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6 mb-5">
@@ -101,7 +101,7 @@
         </div>
         <div class="col-lg-6 mb-5">
           <div class="image image-end mb-4">
-            <img src="../../../../assets/img/website/Air-Conditioning-Maintenance-bottom2.jpg" alt="">
+            <img src="./assets/img/website/Air-Conditioning-Maintenance-bottom2.jpg" alt="">
           </div>
         </div>
       </div>
