--- a/src/app/shared/component/footer/footer.component.html
+++ b/src/app/shared/component/footer/footer.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-3 mb-5">
         <div class="content">
           <h5>  من نحن</h5>
-          <p>{{contactInfo[2].aboutUs}}</p>
+          <p>{{contactInfo.aboutUs}}</p>
           <!-- <p>تقدم شركة فريون خدمات تنظيف شاملة مثل تنظيف المنازل والشقق والفلل وجلي البلاط وغيرها باستخدام اقوى انواع المنظفات المستوردة واحدث اجهزة التنظيف العالمية والعديد من الخدمات المنزلية الاخرى.
           </p> -->
         </div>
@@ -30,7 +30,7 @@
         <p class="fw-bold mb-4"> <i class="fa-solid fa-location-dot me-2 fa-fw"></i> الموقع :
           <a class="ms-2 fw-light text-white" href="https://goo.gl/maps/2v7Z3a5x8z6g4G9s7" target="_blank" >
             <!-- الرياض المملكة العربية السعودية -->
-            {{contactInfo[2].address}}
+            {{contactInfo.address}}
           </a>
         </p>
         <p class="fw-bold mb-4"> <i class="fa-solid fa-clock me-2 fa-fw"></i> ساعات العمل :
@@ -39,10 +39,11 @@
           </span>
         </p>
         <p class="fw-bold"> <i class="fa-solid fa-mobile-screen me-2 fa-fw"></i>  رقم الجوال :
-          <a  href="tel:{{contactInfo[2].phone}}" class="me-2 fw-light text-white dir-ltr d-inline-block">
+          <a  href="tel:{{contactInfo.phone}}" class="me-2 fw-light text-white dir-ltr d-inline-block">
              <!-- (+966) 055 879 6867 -->
-             <!-- {{contactInfo[2].phone}} -->
-             {{formatPhoneNumber(contactInfo[2].phone)}}
+             <!-- {{contactInfo.phone}} -->
+             {{ formatPhoneNumber(contactInfo.phone) }}
+
           </a>
         </p>
 
@@ -55,9 +56,9 @@
         <h5>سوشيال ميديا
         </h5>
         <ul class="list-unstyled  social-media">
-          <li><a [href]="contactInfo[2].faceBookPage" class="text-white" target="_blank"><i class="fa-brands fa-facebook-f fa-lg fa-fw"></i></a></li>
-          <li><a [href]="contactInfo[2].xPage" class="text-white" target="_blank"><i class="fa-brands fa-x-twitter fa-lg fa-fw"></i></a></li>
-          <li><a [href]="contactInfo[2].instagramPage" class="text-white" target="_blank"><i class="fa-brands fa-instagram fa-lg fa-fw"></i></a></li>
+          <li><a [href]="contactInfo.faceBookPage" class="text-white" target="_blank"><i class="fa-brands fa-facebook-f fa-lg fa-fw"></i></a></li>
+          <li><a [href]="contactInfo.xPage" class="text-white" target="_blank"><i class="fa-brands fa-x-twitter fa-lg fa-fw"></i></a></li>
+          <li><a [href]="contactInfo.instagramPage" class="text-white" target="_blank"><i class="fa-brands fa-instagram fa-lg fa-fw"></i></a></li>
         </ul>
       </div>
     </div>
