--- a/src/app/features/pages/services/services.component.html
+++ b/src/app/features/pages/services/services.component.html
@@ -9,9 +9,9 @@
           <div class="col-lg-4 col-md-6 column">
             <div class="services-item">
               <div class="image">
-                <img src="https://adversite.bsite.net/{{item.imagePath}}" [alt]="  item.nameAr" class="img-fluid">
+                <img src="http://backend.fryon.net/{{item.imagePath}}" [alt]="  item.nameAr" class="img-fluid">
                 <div class="icon">
-                  <img src="https://adversite.bsite.net/{{item.iconPath}}" [alt]="item.nameAr  " class="img-fluid">
+                  <img src="http://backend.fryon.net/{{item.iconPath}}" [alt]="item.nameAr  " class="img-fluid">
                 </div>
                 <svg class="svg-gray" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 368 57"> <g><path d="M0.5,57L184,0,368,57H0.5Z"></path></g> </svg>
               </div>
@@ -21,6 +21,7 @@
                 </p> -->
                 <p class="mb-4 line-clamp-4">{{item.descriptionAr}}</p>
                 <a [routerLink]="['../our-service/',item.id]" class="btn btn-primary d-block w-100">المزيد</a>
+                <!-- <a routerLink="../our-service" class="btn btn-primary d-block w-100">المزيد</a> -->
               </div>
             </div>
           </div>
