--- a/src/app/shared/component/footer/footer.component.html
+++ b/src/app/shared/component/footer/footer.component.html
@@ -42,7 +42,7 @@
           <a  href="tel:{{contactInfo.phone}}" class="me-2 fw-light text-white dir-ltr d-inline-block">
              <!-- (+966) 055 879 6867 -->
              <!-- {{contactInfo.phone}} -->
-             {{ formatPhoneNumber(contactInfo.phone) }}
+             {{ formatPhoneNumber(contactInfo!.phone) }}
 
           </a>
         </p>
