--- a/src/assets/scss/layouts/_bootstrapMultiDir.scss
+++ b/src/assets/scss/layouts/_bootstrapMultiDir.scss
@@ -208,6 +208,17 @@
     }
   }
 }
+.input-group {
+  & > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
+    margin-left: unset;
+    margin-inline-start: calc(-1 * var(--bs-border-width));
+
+    border-radius: $radius;
+    border-start-start-radius: 0;
+    border-end-start-radius: 0;
+  }
+}
+
 
 // Pagination
 
