--- a/src/app/core/pages/admin-home/admin-home.component.html
+++ b/src/app/core/pages/admin-home/admin-home.component.html
@@ -1,1 +1,12 @@
-<h1 class="my-5 py-5">77777777777766666666666</h1>
+<section class="home-admin-Container py-5 my-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3">
+        <a class="card text-center">
+          <img src="../../../../assets/img/website/air.png" alt="" width="100" height="100" class="m-auto">
+          <h4>فئة</h4>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
