--- a/src/app/shared/component/loader/loader.component.html
+++ b/src/app/shared/component/loader/loader.component.html
@@ -1,1 +1,6 @@
-<p>loader works!</p>
+  <section class="loader-component" *ngIf="isLoading | async">
+    <i class="fa-solid fa-spinner fa-spin-pulse"></i>
+  </section>
+
+
+
