--- a/src/app/core/pages/governorates/governorates.component.html
+++ b/src/app/core/pages/governorates/governorates.component.html
@@ -1,1 +1,38 @@
-<p>governorates works!</p>
+<section class="services-component">
+  <div class="container">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a routerLink="../admin">الرئيسية</a></li>
+        <li class="breadcrumb-item active" aria-current="page"> المحافظات</li>
+      </ol>
+    </nav>
+    <div class="title d-flex justify-content-between align-items-center my-5">
+      <h5> المحافظات</h5>
+      <a routerLink="../admin" class="btn btn-outline-secondary align-items-center d-flex"><i class="fi fi-rr-arrow-left me-2"></i>  رجوع </a>
+    </div>
+    <div class="row justify-content-center bg-white shadow-sm p-5 rounded-2">
+      <div class="col-lg-6">
+        <form (ngSubmit)="addGovernorates()" [formGroup]="formGovernorates">
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" formControlName="nameAr" name="nameAr" placeholder="إضف محافظة" >
+          <button class="btn btn-sm btn-outline-primary" id="basic-addon2"  *ngIf="!editModel"> إضافة</button>
+          <button class="btn btn-sm btn-outline-secondary" id="basic-addon2" *ngIf="editModel" > تعديل</button>
+        </div>
+        </form>
+        <ul class="list-group">
+
+          @for(item of governoratesList ; track item.id) {
+            <li class="list-group-item list-group-item-action d-flex align-items-center p-0" >
+              <div class="text flex-grow-1 px-3">{{item.nameAr}}</div>
+              <div class="action ">
+                <button class="btn btn-outline-primary btn-sm shadow-none rounded-0" (click)="editGovernorates(item.id)"><i class="fi fi-rr-pencil"></i></button>
+                <button class="btn btn-outline-danger btn-sm shadow-none rounded-0" (click)="deleteGovernorates(item.id)"><i class="fi fi-rr-trash"></i></button>
+              </div>
+            </li>
+
+          }
+        </ul>
+      </div>
+    </div>
+    </div>
+    </section>
