--- a/src/app/core/pages/main-category/main-category.component.html
+++ b/src/app/core/pages/main-category/main-category.component.html
@@ -1,1 +1,49 @@
-<p>main-category works!</p>
+<section class="services-component">
+  <div class="container">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a routerLink="../admin">الرئيسية</a></li>
+        <li class="breadcrumb-item active" aria-current="page">الفئات الرئيسية</li>
+      </ol>
+    </nav>
+    <div class="title d-flex justify-content-between align-items-center my-5">
+      <h5>الفئات الرئيسية</h5>
+      <div class="action d-flex gap-2">
+        <a routerLink="../add-main-category" class="btn btn-outline-primary align-items-center d-flex"><i class="fi fi-rr-plus-small me-2"></i> إضافه فئة </a>
+        <a routerLink="../admin" class="btn btn-outline-secondary align-items-center d-flex"><i class="fi fi-rr-arrow-left me-2"></i>  رجوع </a>
+
+      </div>
+
+    </div>
+    <div class="row g-3">
+      @for(item of ourServices; track item.id; let i = $index) {
+          <div class="col-lg-4 col-md-6 column">
+            <div class="services-item">
+              <div class="image">
+                <img src="http://backend.fryon.net/{{item.imagePath}}" [alt]="  item.nameAr" class="img-fluid">
+                <div class="icon">
+                  <img src="http://backend.fryon.net/{{item.iconPath}}" [alt]="item.nameAr  " class="img-fluid">
+                </div>
+                <svg class="svg-gray" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 368 57"> <g><path d="M0.5,57L184,0,368,57H0.5Z"></path></g> </svg>
+              </div>
+              <div class="services-item-body">
+                <h3 class="mb-4 fw-bold truncate-string-6">  {{item.nameAr}}</h3>
+                <!-- <p>نقدم خدمات التنظيف الشاملة بأرخص الاسعار وفي أسرع وقت مع الضمان.
+                </p> -->
+                <p class="mb-4 line-clamp-4">{{item.descriptionAr}}</p>
+                <div class="d-flex gap-3 ">
+                  <a [routerLink]="['../edit-main-category/',item.id]" class="btn btn-outline-secondary d-block w-100">تعديل</a>
+                  <button  class="btn btn-outline-danger d-block w-100" (click)="deleteCategory(item.id)">حذف</button>
+
+                </div>
+                <!-- <a routerLink="../our-service" class="btn btn-primary d-block w-100">المزيد</a> -->
+              </div>
+            </div>
+          </div>
+
+
+      }
+    </div>
+  </div>
+</section>
+    <p-toast />
