add sub category

--- a/src/app/core/pages/add-sub-category/add-sub-category.component.html
+++ b/src/app/core/pages/add-sub-category/add-sub-category.component.html
@@ -6,7 +6,7 @@
           <a routerLink="../admin" class="d-inline-block">الرئيسية</a>
         </li>
         <li class="breadcrumb-item">
-          <a routerLink="../../main-category" class="d-inline-block">
+          <a routerLink="../sub-category" class="d-inline-block">
             الخدمات</a>
         </li>
         <li class="breadcrumb-item active" aria-current="page">إضافة خدمة</li>
@@ -15,10 +15,10 @@
     <div class="title d-flex justify-content-between align-items-center my-5">
       <h5>إضافة خدمة</h5>
       <div class="d-flex align-items-center gap-3">
-        <button class="btn btn-outline-primary align-items-center d-flex">
+        <button class="btn btn-outline-primary align-items-center d-flex" (click)="addSubCategory()">
           <i class="fi fi-rr-disk me-2"></i> حفظ
         </button>
-        <a routerLink="../main-category" class="btn btn-outline-secondary align-items-center d-flex"><i
+        <a routerLink="../sub-category" class="btn btn-outline-secondary align-items-center d-flex"><i
             class="fi fi-rr-arrow-left me-2"></i> رجوع
         </a>
       </div>
@@ -75,10 +75,6 @@
                   </label>
                   <p-editor formControlName="detailAr" [style]="{ height: '320px', direction: 'rtl' }" />
 
-                  <!-- <textarea name="detailAr" formControlName="detailAr" class="form-control" id="detailAr" rows="3"></textarea> -->
-                  <!-- <p-editor [(ngModel)]="text"  [dir]="'rtl'" formControlName="detailAr"  [style]="{ height: '320px', direction:'rtl' }" >
-
-                </p-editor> -->
                 </div>
               </div>
 
@@ -87,9 +83,26 @@
                   <label for="Fees" class="form-label"> صورة الخدمة</label>
                   <input type="file" id="images" (change)="onFileImageSelected($event)" accept="image/*" multiple
                     class="form-control" />
-                  <!-- <div class="text-danger" *ngIf="formProduct.get('imageForm')?.invalid && formProduct.get('imageForm')?.touched">
-                   <div *ngIf="formProduct.get('imageForm')?.getError('required')">هذا الحق اجبارى</div> </div> -->
                 </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="categories-page py-5">
+
+            <h3 class="fw-bold mb-5">صور الخدمة</h3>
+
+
+                  <a class="text-center" *ngFor="let slide of  images">
+                    <div class="image image-product">
+                      <img [src]="slide.previewUrl" [alt]="slide.id" class="w-100 h-100 object-fit-contain">
+                      <button class="delete-btn" type="button"
+                        (click)="removeImage(slide.id); ">
+                        <i class="fa-solid fa-trash"></i>
+                      </button>
+                    </div>
+                  </a>
+
+
+              </div>
               </div>
             </div>
           </div>
@@ -99,4 +112,4 @@
   </div>
 </section>
 
-<!-- <p-toast /> -->
+<p-toast />
