--- a/src/assets/scss/primeNG/_global.scss
+++ b/src/assets/scss/primeNG/_global.scss
@@ -321,3 +321,6 @@ body .p-editor .p-editor-toolbar , body .p-editor .p-editor-content.ql-snow {
     border: 1px solid var(--gray-25-color) !important;
 
 }
+body .p-editor .p-editor-content .ql-editor {
+  color: var(--gray-90-color);
+}
