--- a/src/app/core/pages/edit-main-category/edit-main-category.component.html
+++ b/src/app/core/pages/edit-main-category/edit-main-category.component.html
@@ -23,7 +23,7 @@
           <i class="fi fi-rr-disk me-2"></i> تعديل
         </button>
         <a
-          routerLink="../main-category"
+          routerLink="../../main-category" 
           class="btn btn-outline-secondary align-items-center d-flex"
           ><i class="fi fi-rr-arrow-left me-2"></i> رجوع
         </a>
