--- a/src/app/core/pages/sub-category/sub-category.component.html
+++ b/src/app/core/pages/sub-category/sub-category.component.html
@@ -3,76 +3,103 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a routerLink="../admin">الرئيسية</a></li>
-        <li class="breadcrumb-item active" aria-current="page">الفئات الفرعية</li>
+        <li class="breadcrumb-item active" aria-current="page">الخدمات</li>
       </ol>
     </nav>
     <div class="title d-flex justify-content-between align-items-center my-5">
-      <h5>الفئات الفرعية</h5>
+      <h5>الخدمات</h5>
       <div class="action d-flex gap-2">
-        <a routerLink="../add-sub-category" class="btn btn-outline-primary align-items-center d-flex btn-sm"><i class="fi fi-rr-plus-small me-2"></i> إضافه فئة </a>
-        <a routerLink="../admin" class="btn btn-outline-secondary align-items-center d-flex btn-sm"><i class="fi fi-rr-arrow-left me-2"></i>  رجوع </a>
+        <a routerLink="../add-sub-category" class="btn btn-outline-primary align-items-center d-flex btn-sm"><i
+            class="fi fi-rr-plus-small me-2"></i> إضافه خدمة </a>
+        <a routerLink="../admin" class="btn btn-outline-secondary align-items-center d-flex btn-sm"><i
+            class="fi fi-rr-arrow-left me-2"></i> رجوع </a>
 
       </div>
 
     </div>
     <div class="row g-3">
+      <div class="col-lg-3"></div>
+      <div class="col-lg-6 mx-auto">
+        <div class="input-group mb-3">
+          <input type="search" class="form-control" placeholder="ابحث عن خدمة..." (input)="applyFilter($event)">
+          <span class="input-group-text" id="basic-addon2"><i class="fa-solid fa-magnifying-glass"></i></span>
+        </div>
+      </div>
+      <div class="col-lg-3"></div>
       <div class="col-lg-12">
         <div class="content">
-    <div class="card-widget">
-      <div class="table-responsive table-responsive-sm">
-        <p-table
-        [value]=" subCategoryList"
-        [paginator]="true"
-        [rows]="PageSize"
-        [rowsPerPageOptions]="[5, 10, 20]"
-        [showCurrentPageReport]="true"
-        [totalRecords]="totalRecords"
-        responsiveLayout="scroll"
-        currentPageReportTemplate=""
-        >
-          <ng-template #header>
-            <tr>
-              <th  >
-                صورة
-              </th>
-              <th pSortableColumn="nameAr" >
-                الفئة الفرعية <p-sortIcon field="nameAr" />
-              </th>
-              <th pSortableColumn="category.id" >
-                الفئة الرئيسية <p-sortIcon field="category.id" />
-              </th>
-              <th pSortableColumn="category" >
-                الاماكن <p-sortIcon field="category" />
-              </th>
+          <div class="card-widget">
+            <div class="table-responsive table-responsive-sm">
+              <p-table [value]="filteredServices || serviceList" [paginator]="true" [rows]="PageSize"
+                [rowsPerPageOptions]="[5, 10, 20]" (onLazyLoad)="onPageChange($event)" [loading]="loading"
+                [showCurrentPageReport]="true" [totalRecords]="totalRecords" responsiveLayout="scroll" [lazy]="true"
+                currentPageReportTemplate="">
+                <ng-template #header>
+                  <tr>
+                    <th>
+                      صورة
+                    </th>
+                    <th pSortableColumn="nameAr">
+                      الفئة الفرعية <p-sortIcon field="nameAr" />
+                    </th>
+                    <th pSortableColumn="category.id">
+                      الفئة الرئيسية <p-sortIcon field="category.id" />
+                    </th>
+                    <th pSortableColumn="category">
+                      الاماكن <p-sortIcon field="category" />
+                    </th>
 
-              <th  >
+                    <th>
 
-              </th>
-            </tr>
-          </ng-template>
-          <ng-template #body let-category>
-             <tr>
-              <td ><img src="http://backend.fryon.net/{{category.images[0].imagePath}}" alt="" width="100" height="100"></td>
-              <td [attr.data-label]="'الفئة الفرعية'"><div class="truncate">{{ category.nameAr }}</div></td>
-              <td [attr.data-label]="'الفئة الرئيسية'">
-                <div class="truncate-string-7">{{ category.category.nameAr }}</div>
-              </td>
-              <td [attr.data-label]="'الاماكن'">{{ category.locationIds.length }}</td>
-              <td class="text-center">
-                <div class="action d-flex gap-2 justify-content-center">
-                  <a class="btn btn-outline-primary btn-sm " ><i class="fi fi-rr-pencil"></i></a>
-                  <button class="btn btn-outline-danger btn-sm " ><i class="fi fi-rr-trash"></i></button>
+                    </th>
+                  </tr>
+                </ng-template>
+                <ng-template #body let-category>
+                  <tr>
+                    <td><img src="http://backend.fryon.net/{{category.images[0].imagePath}}" alt="" width="100"
+                        height="100"></td>
+                    <td [attr.data-label]="'الفئة الفرعية'">
+                      <div class="truncate">{{ category.nameAr }}</div>
+                    </td>
+                    <td [attr.data-label]="'الفئة الرئيسية'">
+                      <div class="truncate-string-7">{{ category.category.nameAr }}</div>
+                    </td>
+                    <td [attr.data-label]="'الاماكن'">{{ category.locationIds.length }}</td>
+                    <td class="text-center">
+                      <div class="action d-flex gap-2 justify-content-center">
+                        <a class="btn btn-outline-primary btn-sm " [routerLink]="['../edit-service', category.id]"><i
+                            class="fi fi-rr-pencil"></i></a>
 
-                </div>
-
-              </td>
-            </tr>
-          </ng-template>
-        </p-table>
+                            <button class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                              (click)="showdeleteServicePopup(category.id)"><i class="fa-solid fa-trash-can"></i></button>
+                      </div>
+                    </td>
+                  </tr>
+                </ng-template>
+              </p-table>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-sm">
+      <div class="modal-content">
+        <div class="modal-header bg-danger text-white">
+          <h1 class="modal-title fs-5" id="exampleModalLabel"> حذف خدمة</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <h5>
+            هل تريد حذف هذه الخدمة؟
+          </h5>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">إغلاق</button>
+          <button type="button" class="btn btn-danger" (click)="deleteService()" data-bs-dismiss="modal">نعم</button>
+        </div>
       </div>
     </div>
-  </div>
+    </div>
 </section>
