edit sub service

--- a/src/app/features/pages/item-service/item-service.component.html
+++ b/src/app/features/pages/item-service/item-service.component.html
@@ -1,7 +1,14 @@
-<a class="card-service " routerLink="/service-details">
-  <img [src]="item.image" class="card-img-top" alt="..." >
-    <p >
-      {{item.title}}
-    </p>
+<div class="row g-3">
+@for(item of itemsService ;track item.id) {
+  <div class="col-lg-4">
+  <a class="card-service " routerLink="/service-details">
+    <img src="http://backend.fryon.net/{{item.images[0].imagePath}} " class="card-img-top" alt="..." >
+      <p >
+        {{item.nameAr}}
+      </p>
 
-</a>
+  </a>
+</div>
+}
+
+</div>
