--- a/src/app/features/pages/service-details/service-details.component.html
+++ b/src/app/features/pages/service-details/service-details.component.html
@@ -1,8 +1,9 @@
 <section class="our-service service-details">
   <div class="title-page mb-5" style="    background-image: linear-gradient(90deg,  rgb(var(--white-rgb-color)/ 70%) 100%),url(./assets/img/website/AirConditioningMaintenance.jpg);
   ">
-    <h2>  شركة صيانة مكيفات بالرياض
+    <h2>  
 
+      {{service.nameAr}}
     </h2>
   </div>
   <div class="service-details-content ">
@@ -10,7 +11,7 @@
       <div class="row">
         <div class="col-lg-6 mb-5">
           <div class="image image-start mb-4">
-            <img src="./assets/img/website/Air-Conditioning-Maintenance-bottom.jpg" alt="">
+            <img src="http://backend.fryon.net/{{service.images[0].imagePath}} " alt="">
           </div>
         </div>
         <div class="col-lg-6 mb-5">
